Fix overlay issue caused by bug in internet explorer that causes browser to not correctly display nested divs with z-index values.

--- a/PortfolioWebsite/ClientApp/src/app/app.component.less
+++ b/PortfolioWebsite/ClientApp/src/app/app.component.less
@@ -14,7 +14,7 @@
 
 #header {
   position: fixed;
-  z-index: 1;
+  z-index: 9;
   background-color: rgba(0,0,0, .8);
 }
 
@@ -48,6 +48,13 @@
   padding-top: 80px;
 }
 
+#overlay-wrapper {
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+}
+
 #overlay {
   position: fixed;
+  z-index: 10;
 }
