--- a/PortfolioWebsite/ClientApp/src/app/utility-components/overlay/overlay.component.less
+++ b/PortfolioWebsite/ClientApp/src/app/utility-components/overlay/overlay.component.less
@@ -2,5 +2,4 @@
   background-color: #000;
   width: 100%;
   height: 100%;
-  z-index: 100;
 }
